--- a/idex.html
+++ b/idex.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            About me
+            ABOUT ME
         </title>
 
         <link rel="stylesheet" href="css/style.css">
@@ -31,7 +31,7 @@
 
             <h4>yuZzi
             </h4>
-            
+
         </section>
     </body>
 
